--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>luxurious-crypto-template</title>
+    <title>Impulso IMP</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/ImpulsoIMP/Impulso/d00394ce303287456dd1cc1655af245e77741596/logoimp.jpeg" type="image/x-icon">
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
