--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Impulso IMP</title>
     <link rel="icon" href="https://raw.githubusercontent.com/ImpulsoIMP/Impulso/d00394ce303287456dd1cc1655af245e77741596/logoimp.jpeg" type="image/x-icon">
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta name="description" content="Impulso IMP el futuro es hoy" />
+    <meta name="author" content="Impulso" />
+    <meta property="og:image" content="/lovable-uploads/b41fc22a-aeb8-47f7-96d9-ab08ba005cc2.png" />
   </head>
 
   <body>
